lookupPrintServices() does not always update the list of Windows remote printers

XMLWordPrintable

    • 2d
    • b20
    • 11
    • b15
    • windows

        JDK-8153732 has provided the mechanism for updating the list of printers returned by PrintServiceLookup.lookupPrintServices(). Yet it does not work in some cases.

        Consider the following scenario. When the JVM starts, there are no remote printers. The user adds a remote printer. PrintServiceLookupProvider.RemotePrinterChangeListener triggers a call to PrintServiceLookupProvider.getRemotePrintersNames which correctly sees the new printer. At the same time, it does not update the cached list printers.

              Assignee:
              Alexey Ivanov
              Reporter:
              Alexey Ivanov
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: