8221412: lookupPrintServices() does not always update the list of Windows remote printers

Reviewed-by: prr, serb